<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.add.AddCarFragment">


    <TextView
        android:id="@+id/addCarCarManufacturesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_manufacturer"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/addCarMarkSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addCarMarkSpinner" />

    <Spinner
        android:id="@+id/addCarMarkSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addCarCarManufacturesTextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addCarDescriptionEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/description"
        android:labelFor="@id/addCarDescriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCarMarkSpinner">

        <EditText
            android:id="@+id/addCarDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="5"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
            tools:text="good car" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addCarImageLinkEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/image_link"
        android:labelFor="@id/addCarImageLinkEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCarDescriptionEditTextLayout">

        <EditText
            android:id="@+id/addCarImageLinkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addCarFeaturesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/addCarFullNameEditTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCarImageLinkEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addCarFullNameEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/owner_full_name"
        android:labelFor="@id/addCarFullNameEditText"
        app:layout_constraintBottom_toTopOf="@+id/addCarSaveFloatingActionButton"
        app:layout_constraintEnd_toStartOf="@+id/addCarPickContactButton"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/addCarFullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:autofillHints="name"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
            tools:text="Elon Musk" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addCarPickContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="150dp"
        android:text="@string/pick_from_contacts"
        app:layout_constraintBottom_toBottomOf="@+id/addCarFullNameEditTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addCarFullNameEditTextLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCarSaveFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>